assets/css/services.css
#body {
  background-color: rgb(91, 149, 214);
  font-family: "BioRhyme";
}

nav { 
display: flex;
justify-content:flex;
flex-direction: row;
gap:3em;
padding:1em;
background-color: rgb(29, 102, 175);

}

nav a {
text-decoration: none;
font-size: 25px;
color: rgb(17, 64, 110);
font-weight: bold;
transition: background-color 0s;
}

h1 {
text-align: center;
margin: 10px;
color: rgb(10, 45, 73);
}

.fa {
color: black;
/* padding: 20px;
font-size: 50px; */
width: 50px;
text-align: right;
text-decoration: none;
}

.container {
  display: flex;
  /* flex-direction: column; */
  height: 100vh;
  flex-wrap: wrap;
  align-content: flex-start;
  row-gap: 15px;
  padding: 45px;
}

/*.removeBtn,*/ .enrollBtn {
  background-color: rgb(150, 205, 241);
  width: 25vh;
  height: 5vh;
  border-radius: 20px;
  font-size: 20px;
  font-family: "BioRhyme";
  cursor: pointer;
}

/*.removeBtn:hover*/ .enrollBtn:hover {
  background-color: rgb(96, 170, 219);
}

.newPostBtn {
  background-color: #11A5D3;
  width: 20vh;
  height: 6vh;
  border-radius: 20px;
  font-size: 20px;
}

.task {
width: 40vw;
padding: 15px;
border-radius: 20px;
border-style: groove;
margin-left: 5vw;
margin-bottom: 1vw;
display: flex;
flex-direction: column;
align-items: center;
background-color: rgb(32, 118, 204);;
}

textarea {
  width: 300px; 
  height: 150px; 
}

body {font-family: "BioRhyme";}
* {box-sizing: border-box;}

.newPostBtn {
background-color: #555;
color: white;
padding: 16px 20px;
border: none;
cursor: pointer;
opacity: 0.8;
width: 250px;
}

.form-popup {
display: none;
position: fixed;
top: 20vh;
right: 35vw;
border: 3px solid #f1f1f1;
}

.form-container {
width: 500px;
padding: 20px;
background-color: white;
}


.form-container input[type=text], textarea {
width: 100%;
padding: 15px;
margin: 5px 0 22px 0;
border: none;
background: #f1f1f1;
}


.form-container input[type=text]:focus, textarea:focus {
background-color: #ddd;
outline: none;
}

.form-container .btn {
background-color: rgb(49, 44, 44);
color: white;
padding: 16px 20px;
border: none;
cursor: pointer;
width: 90%;
margin-left:5%;
margin-top:20px;
opacity: 0.8;
}

.form-container .cancel {
background-color: rgb(49, 44, 44);
}

.form-container .btn:hover, .newPostBtn:hover {
opacity: 1;
}

.container {
  padding-bottom: 50px;
}

small {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
  align-items: center;
  flex-direction: row;
	padding-top: 2em;
  padding-bottom: 2em;
	padding-right: 3em;
	gap: 3em;
  padding-left: 3em;
  margin-top: 0em;
	font-size: 14px;
	color: rgb(49, 44, 44);
	border-top: 0.5px solid rgb(176, 237, 245);
}

small a {
	color: rgb(31, 29, 29);
    transition: background-color 0s;
    text-decoration: none;
}

small a:hover {
	color:rgb(68, 70, 73);
}

footer {
  padding-top: 2.6em;
  
}

main {
  margin-top: 2em;
  margin-right:2em;
}

nav img {
  width: 39px;
  height: 39px;
}

